--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,22 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
+
+
+
+
+
 <body>
 
-<%= yield %>
+	<div class="container">
+       <% flash.each do |key, value| %>
+        <div class="alert alert-<%= key %>"><%= value %></div>
+      <% end %>
+		<%= yield %>
+   
+      <%= debug(params)  if Rails.env.development?  %>
+    </div>
+
 
 </body>
 </html>
